/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2011-02-27 03:23 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/hbjson.c
    ! Function HB_JSONDECODE: param 2 is HB_IT_BYREF

2011-02-27 02:55 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/hbjson.c
    ! missing parameter 2 handler

2011-02-25 08:26 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/rtl/Makefile
    + hbjson.c file dependency

2011-02-25 06:47 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * include/hbapi.h
    ! removed unused __NO_EXPORT__ condition

  * source/vm/itemapi.c
    ! removed empty lines

  * source/compiler/comptool.c
    ! static vars declaration moved to top of file

  * winmake/makefile.vc
  + winmake/msvcerr.vc
    + error checker when compiling with MSVC Runtime (-MD)

2011-02-24 23:36 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  + include/hbjson.h
  + source/rtl/hbjson.c
    ! JavaScript Object Notation (JSON) routines borrowed from Harbour

  * winmake/common.mak
  * winmake/compile.mak
    + object file dependency for hbjson.obj

2011-02-24 10:50 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/mdir.bat
  * winmake/makefile.bc
  * winmake/makefile.vc
  * winmake/makefile.pc
  * winmake/makefile.dc
  * winmake/makefile.wc
  * winmake/contrib.pc
    ! assigning SVN file properties

2011-02-24 10:47 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.gc
    ! assigning SVN file properties

2011-02-24 10:45 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * winmake/makefile.gc
    ! missing libharu make rule

  * ChangeLog
    ! corrected some typos

2011-02-24 10:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  + source/compiler/hbmain.c
  * include/hbcomp.h
  * source/compiler/harbour.c
  * winmake/mdir.bat
  * winmake/common.mak