@@ -8,6 +8,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2011-02-27 20:28 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * source/rtl/direct.c
+    ! DirectoryRecurse("*.*") not returning file without extension. Fixed.
+
 2011-02-27 03:23 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/rtl/hbjson.c
     ! Function HB_JSONDECODE: param 2 is HB_IT_BYREF
